# EPA_dashboard

./: .gitignore  .pre-commit-config.yaml  README.md  makefile  pyproject.toml  requirements.txt  streamlit_app.py
.devcontainer/: devcontainer.json
src/: cache_io.py  config.py  email_io.py  enedis_io.py
src/routines/: __init__.py  alarme_quotidienne.py  compta.py
