[project]
name = "streamlit-app"
version = "0.3.2"
description = "App to visualise PV production"
readme = "README.md"
requires-python = ">=3.13"
packages = [
    "src",
]
dependencies = [
    "enedis-data-io",
    "numpy>=2.1",
    "pandas>=2.2.2",
    "plotly>=5.24.1",
    "pydantic-settings>=2.4.0",
    "pytz>=2024.1",
    "sendgrid>=6.11.0",
    "streamlit>=1.50.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
enedis-data-io = { git = "https://github.com/Pierre-VF/Enedis-data-io.git", rev = "v_0.3.0" }

[dependency-groups]
cli = [
    "openpyxl>=3.1.5",
    "typer>=0.20.0",
]
